[tool.poetry]
name = "solution"
version = "0.1.0"
description = "Gym analyses"
authors = ["Alari Varmann <alaridatascience@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
seaborn = "^0.13.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
